<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.rishabh.goodshows.showDetailsActivity.view.ShowDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@android:color/transparent"
            app:titleEnabled="true">

            <ImageView
                android:id="@+id/backdrop_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@tools:sample/backgrounds/scenic" />

            <ImageView
                android:id="@+id/mask_iv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/backdrop_image_mask_drawable"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_padding"
                android:layout_marginStart="110dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:id="@+id/start_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="&#x2605;"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/title_tv"
                app:layout_constraintTop_toBottomOf="@+id/title_tv" />

            <TextView
                android:id="@+id/star_rating_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/colorPrimary3"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/start_tv"
                app:layout_constraintStart_toEndOf="@id/start_tv"
                tools:text="7.5" />

            <TextView
                android:id="@+id/language_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary3"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/start_tv"
                app:layout_constraintEnd_toStartOf="@id/year_tv"
                app:layout_constraintStart_toEndOf="@id/star_rating_tv"
                tools:text="English" />

            <TextView
                android:id="@+id/year_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_padding"
                android:layout_marginStart="4dp"
                android:textColor="@color/colorPrimary3"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/start_tv"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="2012" />

            <TextView
                android:id="@+id/desc_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_padding"
                android:layout_marginEnd="@dimen/layout_padding"
                android:layout_marginStart="@dimen/layout_padding"
                android:layout_marginTop="8dp"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/star_rating_tv"
                app:layout_constraintVertical_bias="0"
                tools:maxLines="3"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/similar_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_padding"
                android:layout_marginTop="@dimen/layout_padding"
                android:text="@string/similar_shows"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_tv" />

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/progress_indicator"
                style="@style/AVLoadingIndicatorView.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                app:indicatorColor="@color/colorPrimary3"
                app:indicatorName="LineScalePartyIndicator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/similar_label_tv"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/similar_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@color/windowBackground"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                android:paddingBottom="12dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                app:layoutManager="LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/similar_label_tv"
                tools:listitem="@layout/tv_show_horizontal_item_layout"
                tools:visibility="visible"
                />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

    <com.rishabh.goodshows.widgets.RoundedImageView
        android:id="@+id/cover_iv"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/layout_padding"
        android:adjustViewBounds="true"
        android:elevation="@dimen/elevation"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|left|start"
        app:roundedCorners="all"
        tools:src="@tools:sample/avatars" />

</android.support.design.widget.CoordinatorLayout>
